feat: Implemented instData command